--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "content_scripts" : [
 	  {
-		  "matches": ["<all_urls>"],
+		  "matches": ["http://ai2.appinventor.mit.edu/*"],
 		  "js" : ["script.js"],
 		  "css" : ["styles.css"]
 	  }
